[package]
name = "sub_projects"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
zstd = "0.12.3+zstd.1.5.2"
rayon = "1.7.0"
zip = "0.6.4"
zipfs = "0.1.0"

[dev-dependencies]

[features]
default = []
